# AsyncTelegramStarter

./: .gitignore  README.md  bot.py  config_example.json  preparation.py  pyproject.toml  requirements.txt
states/: admin.py  admin_menu.py
states/demo/: admin.py
states/demo/member/: checkin.py
states/demo/member/event/: registration.py
states/member/: checkin.py
states/member/event/: registration.py
states/member_menu/: first_part.py
states/member_menu/under_member/: voobshe_lol.py
utils/: database.py  dispatcher.py  special_types.py  storage.py  tools.py
