[tool.poetry]
name = "AsyncTelegramStarter"
version = "0.1.0"
description = ""
authors = ["eboshare <t.lila@list.ru>"]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = {extras = ["speedups"], version = "^3.6.2"}
aiogram = "^2.6.1"
ujson = "^1.35"
uvloop = "^0.14.0"
addict = "^2.2.1"
aiohttp-socks = "^0.3.4"
motor = "^2.1.0"
jinja2 = "^2.11.1"
pyyaml = "^5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
